bid suggest modifying